--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
   "dependencies": {
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "file-saver": "^2.0.5"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "postcss": "^8.4.16",
-    "autoprefixer": "^10.4.2"
+    "react-dom": "18.2.0"
   }
 }
